version 3.2.1
* fix: cancelling listing not returning money to final bidder (closes #94)

* fix: view listing menu not getting reloaded (closes #93)

* feat: dont persist category ids (closes #92)

* lets maybe do that here instead

* fix: bedrock being silly

* fix: maven CDN warning

* fix: bids not being saved (#112)

* feat: refactor method for update DAO

* feat: refactor method for update DatabaseHandler

* fix: missing import

* feat: Update BidListing in DB

* fix: typo in log

* version bump thing ig

* bug fixes and performance fixes

* fix: maven central
closes: #126

* deps: bump all outdated dependencies

---------

Co-authored-by: Pedro <3602279+Doc94@users.noreply.github.com>